1. fix `undefined exports` error 2. code format 3. project skeleton improvement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,24 +4,19 @@ S3method(coef,greyforecasting)
 S3method(plot,greyforecasting)
 S3method(print,greyforecasting)
 S3method(summary,greyforecasting)
-export("model,")
-export(ABGR)
 export(abgr)
-export(and)
+export(abrgm)
 export(ape)
 export(background)
 export(bo.obj)
-export(computation)
-export(fitting)
-export(generate)
+export(compareseq)
+export(conplot)
 export(gm)
 export(gm_1)
 export(gm_2)
 export(gmprocess)
-export(graphes)
-export(its)
+export(mape)
 export(operator)
-export(results)
 export(roll)
 export(svr)
 export(svwbo)
