--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,17 @@
 Package: greyforecasting
 Type: Package
-Title: What the Package Does (Title Case)
+Title: A package for grey systems forecasting methods
 Version: 0.1.3
-Author: Xu Ning
-Maintainer: The package maintainer <yourself@somewhere.net>
+Authors@R: 
+    c(person(given = "Ning",
+             family = "Xu",
+             role = c("aut", "cre"),
+             email = "nuaa_xuning@163.com"))
 Description: tools for grey systems forecasting methods
-    Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Imports: 
+    ggplot2,
+    reshape2
