--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,19 +4,35 @@ S3method(coef,greyforecasting)
 S3method(plot,greyforecasting)
 S3method(print,greyforecasting)
 S3method(summary,greyforecasting)
+export(LSE)
+export(LSEn)
 export(abgr)
 export(abrgm)
+export(ago)
 export(ape)
 export(background)
-export(bo.obj)
+export(background1)
+export(background2)
+export(combine)
 export(compareseq)
 export(conplot)
+export(dgm)
+export(fgm)
+export(ggplotgm)
 export(gm)
 export(gm_1)
 export(gm_2)
+export(gmn)
 export(gmprocess)
+export(gssave)
+export(iago)
 export(mape)
+export(mpgm)
+export(ones)
 export(operator)
+export(project)
 export(roll)
+export(smth)
 export(svr)
 export(svwbo)
+export(verhulst)
